collision avoidance with collision shape

--- a/config/config.json
+++ b/config/config.json
@@ -22,12 +22,17 @@
     },
     "tasks": {
         "so": [
-            [-1, 1, 0],
-            [1,-1,0]
+            [-1.1, 1, 0],
+            [1, -1, 0]
         ],
         "sf": [
-            [1,-1,0],
-            [-1,1,0]
+            [1, -1, 0],
+            [-1, 1, 0]
         ]
+    },
+    "robot_params": {
+        "collision_shape": {
+            "aligned_box": [0.12, 0.12, 0]
+        }
     }
 }
