update cbf core module

--- a/lib/cbf/CMakeLists.txt
+++ b/lib/cbf/CMakeLists.txt
@@ -54,4 +54,10 @@ target_link_libraries(cbf_examples_CBFControl_example PUBLIC
         model_DoubleIntegratorXYYaw
         cbf_controller_CBFControl)
 
+add_executable(cbf_examples_CBFControlStaticTarget_example examples/CBFControlStaticTarget_example.cpp)
+target_include_directories(cbf_examples_CBFControlStaticTarget_example PUBLIC include ../../third_party/json/single_include)
+target_link_libraries(cbf_examples_CBFControlStaticTarget_example PUBLIC
+        model_DoubleIntegratorXYYaw
+        cbf_controller_CBFControl)
+
 
