--- a/src/fovmpc_estimator/CMakeLists.txt
+++ b/src/fovmpc_estimator/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(fov_estimator)
+project(fovmpc_estimator)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -8,8 +8,8 @@ project(fov_estimator)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  roscpp
-  rospy
+        roscpp
+        rospy
 )
 # find_package(particle_filter)
 get_property(is_pf_ADDED GLOBAL PROPERTY pf_ADDED)
@@ -110,7 +110,7 @@ endif()
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES fov_estimator
+#  LIBRARIES fovmpc_estimator
 #  CATKIN_DEPENDS roscpp rospy
   DEPENDS particle_filter
 )
@@ -130,7 +130,7 @@ include_directories(
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/fov_estimator.cpp
+#   src/${PROJECT_NAME}/fovmpc_estimator.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -141,8 +141,10 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/fov_estimator_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/fovmpc_estimator_node.cpp)
 add_executable(test_node src/test_node.cpp)
+target_include_directories(test_node PUBLIC include)
+target_link_libraries(test_node PUBLIC ${catkin_LIBRARIES} ParticleFilter)
 
 
 ## Rename C++ executable without prefix
@@ -158,7 +160,7 @@ add_dependencies(test_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED
 
 ## Specify libraries to link a library or executable target against
 # target_link_libraries(${PROJECT_NAME}_node ${catkin_LIBRARIES})
-target_link_libraries(test_node ${catkin_LIBRARIES} ${particle_filter_LIBRARIES})
+#target_link_libraries(test_node ${catkin_LIBRARIES} ${particle_filter_LIBRARIES})
 
 
 #############
@@ -208,7 +210,7 @@ target_link_libraries(test_node ${catkin_LIBRARIES} ${particle_filter_LIBRARIES}
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_fov_estimator.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_fovmpc_estimator.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
