--- a/src/fovmpc_estimator/CMakeLists.txt
+++ b/src/fovmpc_estimator/CMakeLists.txt
@@ -142,9 +142,9 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
 # add_executable(${PROJECT_NAME}_node src/fovmpc_estimator_node.cpp)
-add_executable(test_node src/test_node.cpp)
-target_include_directories(test_node PUBLIC include)
-target_link_libraries(test_node PUBLIC ${catkin_LIBRARIES} ParticleFilter)
+add_executable(filter_node src/filter_node.cpp)
+target_include_directories(filter_node PUBLIC include)
+target_link_libraries(filter_node PUBLIC ${catkin_LIBRARIES} ParticleFilter)
 
 
 ## Rename C++ executable without prefix
@@ -156,11 +156,11 @@ target_link_libraries(test_node PUBLIC ${catkin_LIBRARIES} ParticleFilter)
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-add_dependencies(test_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(filter_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
 # target_link_libraries(${PROJECT_NAME}_node ${catkin_LIBRARIES})
-#target_link_libraries(test_node ${catkin_LIBRARIES} ${particle_filter_LIBRARIES})
+#target_link_libraries(filter_node ${catkin_LIBRARIES} ${particle_filter_LIBRARIES})
 
 
 #############
