update with slack value

--- a/lib/mpc_cbf/CMakeLists.txt
+++ b/lib/mpc_cbf/CMakeLists.txt
@@ -38,7 +38,8 @@ add_library(mpc_cbf_controller_BezierIMPCCBF SHARED src/controller/BezierIMPCCBF
 target_include_directories(mpc_cbf_controller_BezierIMPCCBF PUBLIC include)
 target_link_libraries(mpc_cbf_controller_BezierIMPCCBF PUBLIC
         mpc_cbf_optimization_PiecewiseBezierMPCCBFQPGenerator
-        qpcpp_solvers_CPLEX)
+        qpcpp_solvers_CPLEX
+        separating_hyperplanes_Voronoi)
 
 # add examples
 add_executable(mpc_cbf_examples_BezierMPCCBFXYYaw_example examples/BezierMPCCBFXYYaw_example.cpp)
