Tests for separating_hyperplanes

--- a/workspace/lib/separating_hyperplanes/CMakeLists.txt
+++ b/workspace/lib/separating_hyperplanes/CMakeLists.txt
@@ -3,6 +3,7 @@ project(separating_hyperplanes)
 set_property(GLOBAL PROPERTY separating_hyperplanes_ADDED "ON")
 
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../../cmake ${CMAKE_MODULE_PATH})
 
 # add local library
 get_property(is_math_ADDED GLOBAL PROPERTY math_ADDED)
@@ -27,3 +28,29 @@ add_library(separating_hyperplanes_Voronoi SHARED src/Voronoi.cpp)
 target_include_directories(separating_hyperplanes_Voronoi PUBLIC include)
 target_link_libraries(separating_hyperplanes_Voronoi PUBLIC
         math_Types)
+
+# Combined library that includes both SVM and Voronoi
+add_library(separating_hyperplanes INTERFACE)
+target_link_libraries(separating_hyperplanes INTERFACE
+        separating_hyperplanes_SVM
+        separating_hyperplanes_Voronoi)
+
+# Testing configuration
+option(SEPARATING_HYPERPLANES_BUILD_TESTS "Build tests for separating_hyperplanes library" ON)
+
+if(SEPARATING_HYPERPLANES_BUILD_TESTS)
+    # Enable testing
+    enable_testing()
+
+    # Try to find and configure GoogleTest
+    find_package(GoogleTest)
+
+    # Include tests directory if GoogleTest is available
+    if(GOOGLETEST_CONFIGURED)
+        # Make GMOCK_INCLUDE_DIRS available to tests
+        include_directories(${GTEST_INCLUDE_DIRS} ${GMOCK_INCLUDE_DIRS})
+        add_subdirectory(tests)
+    else()
+        message(WARNING "Skipping tests for separating_hyperplanes library as GoogleTest is not available")
+    endif()
+endif()
