model and qpcpp

--- a/workspace/lib/model/CMakeLists.txt
+++ b/workspace/lib/model/CMakeLists.txt
@@ -3,6 +3,7 @@ project(model)
 set_property(GLOBAL PROPERTY model_ADDED "ON")
 
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../../cmake ${CMAKE_MODULE_PATH})
 
 # add local dependency
 get_property(is_math_ADDED GLOBAL PROPERTY math_ADDED)
@@ -24,6 +25,22 @@ add_executable(model_DoubleIntegratorXYYaw_example examples/DoubleIntegratorXYYa
 target_include_directories(model_DoubleIntegratorXYYaw_example PUBLIC include ../../../third_party/json/single_include)
 target_link_libraries(model_DoubleIntegratorXYYaw_example PUBLIC model_DoubleIntegratorXYYaw)
 
-add_executable(model_tests_model_test tests/model_test.cpp)
-target_include_directories(model_tests_model_test PUBLIC include)
-target_link_libraries(model_tests_model_test PUBLIC math_Types)
+# Testing configuration
+option(MODEL_BUILD_TESTS "Build tests for model library" ON)
+
+if(MODEL_BUILD_TESTS)
+    # Enable testing
+    enable_testing()
+
+    # Try to find and configure GoogleTest
+    find_package(GoogleTest)
+
+    # Include tests directory if GoogleTest is available
+    if(GOOGLETEST_CONFIGURED)
+        # Make GMOCK_INCLUDE_DIRS available to tests
+        include_directories(${GTEST_INCLUDE_DIRS} ${GMOCK_INCLUDE_DIRS})
+        add_subdirectory(tests)
+    else()
+        message(WARNING "Skipping tests for model library as GoogleTest is not available")
+    endif()
+endif()
