--- a/workspace/lib/qpcpp/CMakeLists.txt
+++ b/workspace/lib/qpcpp/CMakeLists.txt
@@ -36,3 +36,23 @@ target_link_libraries(qpcpp_solvers_CPLEX PUBLIC
         ${CMAKE_DL_LIBS}
         qpcpp_solvers_Solver)
 
+# Testing configuration
+option(QPCPP_BUILD_TESTS "Build tests for qpcpp library" ON)
+
+if(QPCPP_BUILD_TESTS)
+    # Enable testing
+    enable_testing()
+
+    # Try to find and configure GoogleTest
+    find_package(GoogleTest)
+
+    # Include tests directory if GoogleTest is available
+    if(GOOGLETEST_CONFIGURED)
+        # Make GMOCK_INCLUDE_DIRS available to tests
+        include_directories(${GTEST_INCLUDE_DIRS} ${GMOCK_INCLUDE_DIRS})
+        add_subdirectory(tests)
+    else()
+        message(WARNING "Skipping tests for qpcpp library as GoogleTest is not available")
+    endif()
+endif()
+
