--- a/workspace/lib/cbf/CMakeLists.txt
+++ b/workspace/lib/cbf/CMakeLists.txt
@@ -52,21 +52,16 @@ target_link_libraries(cbf_controller_CBFControl PUBLIC
         model_DoubleIntegratorXYYaw)
 
 # add examples
-#add_executable(cbf_test tests/cbf_test.cpp)
-#target_include_directories(cbf_test PUBLIC include)
-#target_link_libraries(cbf_test PUBLIC ginac cln)
-#
-#add_executable(test_class tests/test_class.cpp)
-#target_include_directories(test_class PUBLIC include)
-#target_link_libraries(test_class PUBLIC cbf_detail_FovCBF ginac cln)
-
 add_executable(cbf_examples_CBFControl_example examples/CBFControl_example.cpp)
 target_include_directories(cbf_examples_CBFControl_example PUBLIC include ../../../third_party/json/single_include)
 target_link_libraries(cbf_examples_CBFControl_example PUBLIC
         model_DoubleIntegratorXYYaw
         cbf_controller_CBFControl
         cxxopts
-        ParticleFilter)
+        ParticleFilter
+        math_Geometry
+        math_Controls
+        math_Random)
 
 #add_executable(cbf_examples_CBFControlStaticTarget_example examples/CBFControlStaticTarget_example.cpp)
 #target_include_directories(cbf_examples_CBFControlStaticTarget_example PUBLIC include ../../../third_party/json/single_include)
