Update docker related files

--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -6,5 +6,4 @@ services:
     stdin_open: true
     tty: true
     volumes:
-      - ../workspace:/usr/src/mpc-cbf/workspace
-      - ../.git:/usr/src/mpc-cbf/.git
+      - ../:/usr/src/mpc-cbf/
